--- a/OrangeDot6_files/visuals/visuals-microdata-drafts.Rmd
+++ b/OrangeDot6_files/visuals/visuals-microdata-drafts.Rmd
@@ -32,9 +32,14 @@ fullwidth_map = list(
 
 # Load packages ----
 library(tidyverse)
+library(tidycensus)
 library(scales)
+library(RColorBrewer)
+library(ggspatial)
+library(tigris)
 library(readxl)
 library(stringr)
+library(sf)
 library(ggthemes)
 library(rcartocolor)
 library(patchwork)
@@ -42,7 +47,22 @@ library(gt)
 library(ggpol)
 library(ggrepel)
 
-# Palettes ----
+# Tract geometries ----
+county_codes <- c("003", "540", "065", "079", "109", "125", "029")
+tract_geo <- tracts(state = "VA", county = county_codes)
+
+# Map palettes ----
+pal_inc <- carto_pal(7, "Geyser")
+# "#008080" "#70A494" "#B4C8A8" "#F6EDBD" "#EDBB8A" "#DE8A5A" "#CA562C"
+# pal_inc <- c("#EE6400","#F37903","#F78C05","#FCA108","#E7AD1B","#ABB046","#6FB272","#33B59D","#2DB0AC","#4CA7A9")
+
+pal_ssw <- carto_pal(7, "RedOr")
+# "#F6D2A9" "#F5B78E" "#F19C7C" "#EA8171" "#DD686C" "#CA5268" "#B13F64"
+# pal_ssw <- c("#F6D2A9", "#F5B78E", "#F19C7C", "#EA8171", "#DD686C")
+
+pal_safe <- carto_pal(12, "Safe")
+# "#88CCEE" "#CC6677" "#DDCC77" "#117733" "#332288" "#AA4499" "#44AA99" "#999933" "#882255" "#661100" "#6699CC" "#888888"
+
 pal_five <- c("#DE8A5A", "#EDBB8A", "#F6EDBD","#B4C8A8", "#70A494")
 orange_dot <- "#CA562C"
 green_dot <- "#B4C8A8"
@@ -57,8 +77,7 @@ acs_pums <- "Data Source: ACS Public Use Microdata Sample (PUMS), U.S. Census Bu
 
 ```
 
-
-```{r race_by_percent}
+```{r race_by_count}
 fam_by_race <- read_csv("../microdata/data/families_by_race.csv") %>% 
   mutate(
     race_ethn = case_when(hhldr_race_ethn %in% c("Hispanic", "Black", "White") ~ hhldr_race_ethn,
@@ -68,8 +87,39 @@ fam_by_race <- read_csv("../microdata/data/families_by_race.csv") %>%
            below_ess_finc == "Yes" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families below SSS)"),
            below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)")),
          below_ess_finc = factor(below_ess_finc, levels = c("Yes", "No"),
-                                 labels = c("Income Below Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard")))
+                                 labels = c("Income Below\nSelf-Sufficiency Standard", "Income Above\nSelf-Sufficiency Standard")))
 
+fam_by_race %>% 
+  filter(hhldr_race_ethn %in% c("White", "Black", "Hispanic")) %>% 
+  ggplot(aes(x = count, y = race_ethn, group = race_ethn, fill = below_ess_finc)) +
+  geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single")) +
+  geom_text(aes(label = label_text),
+            position = position_dodge2(width = 0.9, preserve = "single"),
+            vjust = 0.5,
+            hjust = -0.025,
+            size = 3) +
+  scale_y_discrete(name = "") +
+  scale_x_continuous(name = "Number of Families",
+                     breaks = seq(0, 50000, by = 10000),
+                     label=comma,
+                     expand = expansion(mult = c(0, .5))) +
+  scale_fill_manual(values = c(orange_dot, grey_dot)) +
+  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Race/Ethnicity",
+       subtitle = geography_label,
+       caption = acs_pums) +
+  theme_minimal() +
+  theme(legend.title=element_blank(),
+        legend.position = "top",
+        # legend.location = "plot",
+        legend.justification="center",
+          panel.grid.major.y = element_blank(),
+          axis.ticks = element_blank(),
+          panel.grid.minor = element_blank(),
+          plot.title.position= "plot",
+          plot.caption.position = "plot")
+```
+
+```{r race_by_percent}
 fam_by_race %>% 
   filter(hhldr_race_ethn %in% c("White", "Black", "Hispanic")) %>% 
   ggplot(aes(x = percent, y = race_ethn, group = race_ethn, fill = below_ess_finc)) +
@@ -85,9 +135,8 @@ fam_by_race %>%
                      limits = c(0,100),
                      breaks = seq(0, 100, by = 25),
                      label= label_percent(scale = 1),
-                     expand = expansion(mult = c(0, 0.1)),
-                     sec.axis = dup_axis()) +
-  scale_fill_manual(values = c(orange_dot, green_dot)) +
+                     expand = expansion(mult = c(0, 0.1))) +
+  scale_fill_manual(values = c(orange_dot, grey_dot)) +
   labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Race/Ethnicity",
        subtitle = geography_label,
        caption = acs_pums) +
@@ -104,7 +153,58 @@ fam_by_race %>%
 ```
 
 
-```{r age_butterfly_percent}
+```{r race_stacked}
+fam_by_race %>% group_by(below_ess_finc, race_ethn) %>% 
+  summarise(percent = sum(percent),
+            count =sum(count)) %>% 
+  ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = race_ethn)) +
+  geom_bar(stat = "identity") +
+  # geom_text(aes(label = case_when(
+  #          shelter_burden == "Not Burdened" ~ paste0(round(percent, 0), "% are Not Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
+  #          shelter_burden == "Burdened" ~ paste0(round(percent, 0), "% are Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
+  #          shelter_burden == "Severely Burdened" ~ paste0(round(percent, 0), "% are Severely Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))),
+  #           position = position_stack(vjust = 0.5),
+  #           vjust = 0.5,
+  #           # hjust = -0.025,
+  #           size = 3) +
+  geom_label_repel(aes(label = paste0(scales::percent(percent / 100, accuracy = 1), "\n(",
+                        scales::comma(count), ")")),
+                  size = 3, fontface = "bold", show.legend = FALSE,
+                  min.segment.length = Inf,
+                  position = position_stack(vjust = 0.5),
+           # vjust = 0.5,
+           hjust = -0.025,
+                  box.padding = 0.01,
+                  # force_pull = 100,
+                  # direction = "x",
+                  color = "white",
+                   seed = 123) +
+  scale_x_continuous(limits = c(0, 105),
+                     breaks = seq(0, 100, by = 25), 
+                     labels = label_percent(scale = 1), 
+                     name = "Percent of Families",
+                     sec.axis = dup_axis(),
+                     expand = expansion(mult = c(0.1, .2))) + 
+  scale_y_discrete(name = "") +
+  scale_fill_manual(values = c("#882255", "#aa4499", "#44aa99", "#88ccee")) +
+  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Race/Ethnicity",
+       subtitle = geography_label,
+       caption = acs_pums) +
+  theme_minimal() +
+  theme(legend.title=element_blank(),
+        legend.position = "top",
+        # legend.location = "plot",
+        legend.justification="center",
+          panel.grid.major.y = element_blank(),
+          axis.ticks = element_blank(),
+          panel.grid.minor = element_blank(),
+          plot.title.position= "plot",
+          plot.caption.position = "plot",
+        axis.text.y = element_text(hjust = 0.5))
+```
+
+
+```{r age_count, fig.height=6, fig.width=7}
 fam_by_age <- read_csv("../microdata/data/families_by_age.csv") %>% 
   mutate(hhldrage_bin = factor(hhldrage_bin, levels = c("65 and over", "55 to 64", "45 to 54", "35 to 44", "25 to 34", "Under 25")),
          label_text = case_when(
@@ -112,6 +212,38 @@ fam_by_age <- read_csv("../microdata/data/families_by_age.csv") %>%
            below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)")),
          below_ess_finc = factor(below_ess_finc, levels = c("Yes", "No"),
                                  labels = c("Income Below Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard")))
+
+fam_by_age %>% 
+  ggplot(aes(x = count, y = hhldrage_bin, group = hhldrage_bin, fill = below_ess_finc)) +
+  geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single")) +
+  geom_text(aes(label = label_text),
+            position = position_dodge2(width = 0.9, preserve = "single"),
+            vjust = 0.5,
+            hjust = -0.025,
+            size = 3) +
+  scale_y_discrete(name = "") +
+  scale_x_continuous(name = "Number of Families",
+                     breaks = seq(0, 15000, by = 2500),
+                     label=comma,
+                     expand = expansion(mult = c(0, .5))) +
+  scale_fill_manual(values = c(orange_dot, grey_dot)) +
+  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Householder Age",
+       subtitle = geography_label,
+       caption = acs_pums) +
+  theme_minimal() +
+  theme(legend.title=element_blank(),
+        legend.position = "top",
+        # legend.location = "plot",
+        legend.justification="center",
+          panel.grid.major.y = element_blank(),
+          axis.ticks = element_blank(),
+          panel.grid.minor = element_blank(),
+          plot.title.position= "plot",
+          plot.caption.position = "plot")
+```
+
+
+```{r age_butterfly_percent}
 
 dummy_age_per = tibble(y = c(-50, 0, 0, 50),
                     below_ess_finc = c("Income Above Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard",
@@ -145,7 +277,7 @@ ggplot() +
             ) +
   scale_x_discrete(name = "") +
   scale_y_continuous(expand = expansion(mult = c(0, 0)),
-                     name = "Percent of Families") +
+                     name = "") +
   scale_fill_manual(values = c(orange_dot, green_dot)) +  
   facet_share(~ below_ess_finc,
               dir = "h",
@@ -162,15 +294,70 @@ ggplot() +
         strip.text = element_text(size = rel(1),
                                   # face = "bold",
                                   color = "black"),
-    strip.background = element_rect(fill = "white", colour = "black", size = 0),
-    plot.title.position= "plot",
-          plot.caption.position = "plot"
+    strip.background = element_rect(fill = "white", colour = "black", size = 0)
         )
 
 ```
 
+```{r age_butterfly_count, echo=FALSE, fig.height=5, fig.width=8}
+dummy_ess = tibble(y = c(-15000, 0, 0, 15000),
+                    below_ess_finc = c("Income Above Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard",
+                                       "Income Below Self-Sufficiency Standard", "Income Below Self-Sufficiency Standard"))
 
-```{r tenure-stacked}
+dat_ess <- fam_by_age %>% 
+    group_by(count, below_ess_finc) %>%
+    # mutate(x = sequence(n())) %>%
+    mutate(y = ifelse(below_ess_finc == "Income Above Self-Sufficiency Standard", -count, count),
+           label_text = case_when(
+           below_ess_finc == "Income Below Self-Sufficiency Standard" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), "\n(", round(percent, 0), "% earning below)"),
+           below_ess_finc == "Income Above Self-Sufficiency Standard" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " families \n(", round(percent, 0), "% earning above)"))) %>%
+    ungroup() 
+
+ggplot() +
+  geom_bar(data = dat_ess, 
+           mapping = aes(y = y,
+                         x = hhldrage_bin,
+                         fill = below_ess_finc),
+           stat = "identity",
+           width = 0.8) +
+  geom_blank(data = dummy_ess,
+             mapping = aes(y = y)) +
+  geom_text(data = dat_ess, 
+            mapping = aes(x = hhldrage_bin, 
+                          y = case_when(below_ess_finc == "Income Above Self-Sufficiency Standard" ~  y-500,
+                                        below_ess_finc == "Income Below Self-Sufficiency Standard" ~  y+500),
+                          hjust = case_when(below_ess_finc == "Income Above Self-Sufficiency Standard" ~  1,
+                                        below_ess_finc == "Income Below Self-Sufficiency Standard" ~  0),
+                          label = label_text),
+            size = 3
+            ) +
+  scale_x_discrete(name = "") +
+  scale_y_continuous(
+                     expand = expansion(mult = c(0, 0)),
+                     name = "") +
+  scale_fill_manual(values = c(orange_dot, green_dot)) +  
+  facet_share(~ below_ess_finc, 
+              dir = "h",
+              scales = "free",
+              reverse_num = TRUE) +
+  coord_flip(clip = "off") +
+  theme_light() +
+  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Householder Age",
+       subtitle = geography_label,
+       caption = acs_pums) +
+  theme(legend.position = "none",
+        panel.grid.minor.x = element_blank(),
+        panel.border = element_blank(),
+        strip.text = element_text(size = rel(1), 
+                                  # face = "bold", 
+                                  color = "black"),
+    strip.background = element_rect(fill = "white", colour = "black", size = 0)
+        )
+
+
+```
+
+```{r tenure-bar}
 fam_by_tenure <- read_csv("../microdata/data/families_by_tenure.csv") %>% 
   mutate(label_text = case_when(
     below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)"),
@@ -178,6 +365,37 @@ fam_by_tenure <- read_csv("../microdata/data/families_by_tenure.csv") %>%
          below_ess_finc = factor(below_ess_finc, levels = c("No", "Yes"),
                                  labels = c("Income Above\nSelf-Sufficiency Standard", "Income Below\nSelf-Sufficiency Standard")))
 
+fam_by_tenure %>% 
+  ggplot(aes(x = count, y = factor(own_rent, levels = c("Own", "Rent")), group=own_rent, fill = below_ess_finc)) +
+  geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single")) +
+  geom_text(aes(label = label_text),
+            position = position_dodge2(width = 0.9, preserve = "single"),
+            vjust = 0.5,
+            hjust = -0.025,
+            size = 3) +
+  scale_y_discrete(name = "") +
+  scale_x_continuous(name = "Number of Families",
+                     breaks = seq(0, 50000, by = 10000),
+                     label=comma,
+                     expand = expansion(mult = c(0, .5))) +
+  scale_fill_manual(values = c(grey_dot, orange_dot)) +
+  guides(fill = guide_legend(reverse = TRUE)) +
+  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Status: Homeowner or Renter",
+       subtitle = geography_label,
+       caption = acs_pums) +
+  theme_minimal() +
+  theme(legend.title=element_blank(),
+        legend.position = "top",
+        # legend.location = "plot",
+        legend.justification="center",
+          panel.grid.major.y = element_blank(),
+          axis.ticks = element_blank(),
+          panel.grid.minor = element_blank(),
+          plot.title.position= "plot",
+          plot.caption.position = "plot")
+```
+
+```{r tenure-stacked}
 fam_by_tenure %>% 
   ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = factor(own_rent, levels = c("Own", "Rent")))) +
   geom_bar(stat = "identity") +
@@ -223,6 +441,65 @@ fam_by_tenure %>%
 ```
 
 
+```{r tenure-butterfly}
+
+# 
+# dummy_tenure = tibble(y = c(-100, 0, 0, 100),
+#                     below_ess_finc = c("Income Above Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard",
+#                                        "Income Below Self-Sufficiency Standard", "Income Below Self-Sufficiency Standard"))
+# 
+# dat_tenure <- fam_by_tenure %>% 
+#   mutate(percent = round(percent)) %>% 
+#     group_by(percent, below_ess_finc) %>%
+#     mutate(y = ifelse(below_ess_finc == "Income Above Self-Sufficiency Standard", -percent, percent),
+#            label_text = case_when(
+#            below_ess_finc == "Income Below Self-Sufficiency Standard" ~ paste0(round(percent, 0), "% earning below\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
+#            below_ess_finc == "Income Above Self-Sufficiency Standard" ~ paste0(round(percent, 0), "% earning above\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))) %>%
+#     ungroup() 
+# 
+# ggplot() +
+#   geom_bar(data = dat_tenure, 
+#            mapping = aes(y = y,
+#                          x = own_rent,
+#                          fill = below_ess_finc),
+#            stat = "identity",
+#            width = 0.8) +
+#   geom_blank(data = dummy_tenure,
+#              mapping = aes(y = y)) +
+#   geom_text(data = dat_tenure, 
+#             mapping = aes(x = own_rent, 
+#                           y = case_when(below_ess_finc == "Income Above Self-Sufficiency Standard" ~  y-1.2,
+#                                         below_ess_finc == "Income Below Self-Sufficiency Standard" ~  y+1.2),
+#                           hjust = case_when(below_ess_finc == "Income Above Self-Sufficiency Standard" ~  1,
+#                                         below_ess_finc == "Income Below Self-Sufficiency Standard" ~  0),
+#                           label = label_text),
+#             size = 3
+#             ) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(
+#                      expand = expansion(mult = c(0, 0)),
+#                      name = "") +
+#   scale_fill_manual(values = c(blue_dot, grey_dot)) +  
+#   facet_share(~ below_ess_finc, 
+#               dir = "h",
+#               scales = "free",
+#               reverse_num = TRUE) +
+#   coord_flip(clip = "off") +
+#   theme_light() +
+#   labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Status: Homeowner or Renter",
+#        subtitle = geography_label,
+#        caption = acs_pums) +
+#   theme(legend.position = "none",
+#         panel.grid.minor.x = element_blank(),
+#         panel.border = element_blank(),
+#         strip.text = element_text(size = rel(1), 
+#                                   # face = "bold", 
+#                                   color = "black"),
+#     strip.background = element_rect(fill = "white", colour = "black", size = 0)
+#         )
+
+```
+
 ```{r burden}
 fam_by_burden <- read_csv("../microdata/data/families_by_burden.csv") %>% 
   mutate(label_text = case_when(
@@ -262,7 +539,7 @@ fam_by_burden %>%
                      sec.axis = dup_axis(),
                      expand = expansion(mult = c(0, .35))) + 
   scale_y_discrete(name = "") +
-  scale_fill_manual(values = c("#B4C8A8", "#DE8A5A", "#CA562C")) +
+  scale_fill_manual(values = c("#b2b8be", "#3B8EA5", "purple")) +
   labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Burden",
        subtitle = geography_label,
        caption = acs_pums) +
@@ -411,7 +688,7 @@ occupations_filtered <- occupations_by_wagebin %>%
   # filter(employment_per_1_000_jobs > 8) %>% 
   filter(occupation %in% c("Fast Food and Counter Workers", "Cashiers", "Home Health and Personal Care Aides",
                            "Customer Service Representatives", "Construction Laborers", "Light Truck Drivers", "Maintenance and Repair Workers, General", "Elementary School Teachers, Except Special Education
-", "Electricians", "Medical Records Specialists", "Office and Administrative Support Workers, All Other", "Registered Nurses", "Radiologic Technologists and Technicians", "Computer User Support Specialists", "General and Operations Managers", "Construction Managers", "Dental Hygienists")) %>% 
+", "Electricians", "Automotive Service Technicians and Mechanics", "Office and Administrative Support Workers, All Other", "Registered Nurses", "Radiologic Technologists and Technicians", "Computer User Support Specialists", "General and Operations Managers", "Construction Managers", "Project Management Specialists")) %>% 
   mutate(median_wage_bin_label = factor(median_wage_bin_label, levels = c("25610-37760", "37860-48320", "48340-60600", "60640-86950", "88050-238990"), labels = c("$25,610 - $37,760", "$37,860 - $48,320", "$48,340 - $60,600", "$60,640 - $86,950", "$88,050 - $238,990")))
 
 occupations_filtered %>%
@@ -461,10 +738,6 @@ occupations_filtered %>%
   tab_style(
     style = cell_text(align = "center", v_align = "middle"),
     locations = list(cells_column_labels(2:4), cells_body(2:4))
-  ) %>% 
-  tab_footnote(
-    footnote = "Employment rate per 1,000 jobs",
-    locations = cells_column_labels(columns = employment_per_1_000_jobs)
   ) %>% 
   tab_header(
     title = "Common Occupations for Job Seekers by Annual Median Wage"
